# codex-skills

./: executing-plans.skill  pyproject.toml
algorithmic-art/: SKILL.md
brainstorming/: SKILL.md
canvas-design/: SKILL.md
doc-coauthoring/: SKILL.md
docx/: SKILL.md
executing-plans/: SKILL.md
internal-comms/: SKILL.md
pdf/: SKILL.md
requesting-code-review/: SKILL.md
web-artifacts-builder/: SKILL.md
web-artifacts-builder/scripts/: bundle-artifact.sh
writing-plans/: SKILL.md
