[project]
name = "skills"
version = "0.1.0"
description = "Codex Skills"
readme = "README.md"
authors = [
    { name = "Joaquin Campo", email = "jcampo@pento.ai" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
skills = "skills:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
